version/0.1/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.1.3 <https://github.com/ansys/scade-git/releases/tag/v0.1.3>`_ - 2024-09-26
==============================================================================

Fixed
^^^^^

- fix: Make sure the directory %APPDATA%\SCADE\Customize exists when registering the package `#31 <https://github.com/ansys/scade-git/pull/31>`_
- fix:add changelog action in cicd `#34 <https://github.com/ansys/scade-git/pull/34>`_
- fix: The package is not loaded by SCADE 2024 R2 `#36 <https://github.com/ansys/scade-git/pull/36>`_
- fix: Update the change log only when creating a new release `#37 <https://github.com/ansys/scade-git/pull/37>`_


Documentation
^^^^^^^^^^^^^

- maint: technical review `#25 <https://github.com/ansys/scade-git/pull/25>`_
- docs: Add the parameter --user in the pip install command line `#33 <https://github.com/ansys/scade-git/pull/33>`_


Maintenance
^^^^^^^^^^^

- ci: use trusted publishers `#26 <https://github.com/ansys/scade-git/pull/26>`_
- ci: remove the artifact examples `#27 <https://github.com/ansys/scade-git/pull/27>`_

.. vale on